--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -665,10 +665,17 @@ margin-left: -30px;
 STAN SE
 *****/
 
-.role-requirements {
-    list-style-type: none;
+ul.role-requirements {
+  list-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAHElEQVQY02NgIBH8h+LBqJiJgUxAlNXUU0QUAACiLw313RZ+RwAAAABJRU5ErkJggg==);
+  padding-left: 18px;
 }
-.role-requirements li {
+
+ul.role-requirements ul {
+  list-style-image: none;
+  list-style-type: circle;
+}
+
+ul.role-requirements li {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
